<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@color/black"
        android:id="@+id/buttonCLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/send"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:background="#7348B1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="match_parent"
            app:cardPreventCornerOverlap="true"
            app:cardMaxElevation="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#AE82ED">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currentlyText"
                    android:text="@string/currently"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currentlyDataText"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:text="@string/no_data"
                    android:padding="8dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/windText"
                    android:text="@string/wind"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/windDataText"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/no_data"
                    android:padding="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidityText"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidityDataText"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:text="@string/no_data"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressureText"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressureDataText"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/no_data"
                    android:padding="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:gravity="center"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="10dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#AE82ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tempText"
                        android:text="@string/temperature"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tempDataText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/no_data"
                        android:padding="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="12dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minMaxText"
                        android:text="@string/min_max"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minMaxDataText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/no_data"
                        android:padding="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                app:cardPreventCornerOverlap="true"
                app:cardMaxElevation="10dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#AE82ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/locationText"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/locationDataText"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:text="@string/no_data"
                        android:padding="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="12dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/latLongText"
                        android:text="@string/lat_lon"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/latLongDataText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/no_data"
                        android:padding="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>